fixed link jumping on hover, fixed 4k desktop view

--- a/src/components/common/modal-nav/modal-nav.css
+++ b/src/components/common/modal-nav/modal-nav.css
@@ -1,3 +1,11 @@
+.show {
+  display: contents;
+}
+
+.hide {
+  display: none;
+}
+
 @media only screen and (max-width: 700px) {
   .modal__nav {
     padding: 2rem;
@@ -30,6 +38,7 @@
     line-height: 25px;
     text-transform: uppercase;
     width: 100px;
+    border-bottom: 1px solid transparent;
   }
 
   .modal__nav-item:hover {
