--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -26,6 +26,7 @@
   text-decoration: none;
   padding: 0 0 0.5rem 0;
   margin: 0 0.4rem;
+  border-bottom: 1px solid transparent;
 }
 
 .footer-nav__item:hover {
@@ -51,6 +52,7 @@
   width: 24px;
   height: auto;
   padding: 0 0 0.5rem 0;
+  border-bottom: 1px solid transparent;
 }
 .footer-icon__logo:hover {
   border-bottom: 1px solid white;
