--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  margin: 0;
+  max-width: 1440px;
+  margin: 0 auto;
   font-family: "Josefin Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
